# NightOwlToolsV2

./: .gitmodules  CMakeLists.txt  MoveExeFromBuild2NOTV2.bat  README.md  main.c  memo.md  test.lua
NightOwlToolsV2/: .gitignore  API.lua  Common.lua  Target.md  diff.txt  main.lua  miss.txt  readme.md
NightOwlToolsV2/Assistants/: Converter.py  ReadXls.py
NightOwlToolsV2/BlackMoonAndroidProject/: BuildApk.py
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/: AndroidManifest.xml  build.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/assets/: aonesdk.json  cplog_config.json  uuSdkConfig.json
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/libs/bugly/BuglySDK/Android/: Android.mk
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/drawable/: aonesdk_button_update_cancel.xml  aonesdk_button_update_confirm.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/layout/: activity_clip_picture.xml  activity_urlopen.xml  aonesdk_announce_dialog.xml  aonesdk_update_dialog.xml  global_screenshot.xml  layout_dialog.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values/: aonesdk_colors.xml  aonesdk_dimens.xml  aonesdk_strings.xml  styles.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-en/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-in/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-ja/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-ko/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-th/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-vi/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-zh/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-zh-rCN/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/_uusdk/res/values-zh-rHK/: aonesdk_strings.xml
NightOwlToolsV2/BlackMoonAndroidProject/application/: .gitignore  .project  AndroidManifest.xml  Readme.md  ant.properties  build.xml  project.properties
NightOwlToolsV2/BlackMoonAndroidProject/application/assets/: aonesdk.json  cplog_config.json  list-v2.csv  list.csv  privacy.txt  user.txt
NightOwlToolsV2/BlackMoonAndroidProject/application/res/drawable/: privacy_checkbox_style.xml
NightOwlToolsV2/BlackMoonAndroidProject/application/res/layout/: activity_privacy.xml  activity_privacy_dialog.xml
NightOwlToolsV2/BlackMoonAndroidProject/application/res/values/: privacy_colors.xml  string.xml  string_privacy.xml  strings.xml  styles.xml
NightOwlToolsV2/BlackMoonTextDiff/: Main.lua
NightOwlToolsV2/BlackMoonTools/: Hotfix.lua
NightOwlToolsV2/BlackMoonTools/Cmd/: 1. 处理资源.bat  2.上传资源.bat  Readme.md
NightOwlToolsV2/BlackMoonTools/Cmd/黑月出包/: 1. 处理资源.bat
NightOwlToolsV2/BlackMoonTools/Python/: 1  ChangeResVer.py  ExportHotFix.py  PlistToPvr.py  ResToEtc.py  ResToPvr.py  SpineToEtc.py  SpineToPVR.py  UploadHotfixToCos.py  compareList.py  publish_res.py
NightOwlToolsV2/BlackMoonTools/config/: BlackMoonBt5.config.template
NightOwlToolsV2/BlackMoonTools/lua/: Common.lua  copyDirStruct.lua  getDealFiles.lua  getFilesOfDir.lua  getNeedDealFiles.lua  updateFileStateDB.lua
NightOwlToolsV2/BlackMoonTools/src/encrypt/: Program.cs  encrypt.csproj  encrypt.sln
NightOwlToolsV2/BlackMoonTools/src/encrypt/Properties/: AssemblyInfo.cs
NightOwlToolsV2/BlackMoonTools/temp/: .gitignore  yougubt5_deal_files.txt
NightOwlToolsV2/CopyDirStructure/: CopyDirStructure.lua  CopySpecialDir.lua  config.lua  readme.md
NightOwlToolsV2/KoreanToChinese/: Common.lua  ExtractTextToCsv.lua  FilterReplaceText.lua  KoreanToChinese.lua  Readme.md  ReplaceTextToCsd.lua
NightOwlToolsV2/PublishRes/: PublishCsd.lua  PublishPlist.lua  PublishRes.lua  README.md  ccs_template.xml  config.lua  config.lua.template  css_template.xml
NightOwlToolsV2/PublishResource/: InitDB.lua  PublishCsd.lua  PublishPlist.lua  README.md
NightOwlToolsV2/Scripts/: CompareDirectory.lua  CompareFiles.lua  CopyAToB.lua
NightOwlToolsV2/Tools/: CSV.lua  Common.lua  Common.txt  Log.lua  Object.lua  Parser.lua  Win32Cmd.lua  XML.lua
NightOwlToolsV2/Translation/: Extract.lua  Filter.lua  Inject.lua  Translation.lua  config.lua
extensions/: CMakeLists.txt  README.md
extensions/lsqlite3_v096/: Makefile
lua-5.4.7/src/: CMakeLists.txt
